Update several warnings